--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,6 +41,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'Periodicals'
+- GITenberg
 title: "Chambers's Journal of Popular Literature, Science, and Art, No. 680\r\nJanuary\
   \ 6, 1877"
 url: http://www.gutenberg.org/ebooks/46682
